improve mobile menu

--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -81,6 +81,12 @@ $app-pad-bottom: 1.5rem;
   $navbar-icon-width: 3rem;
   $navbar-btn-width: 3rem;
 
+  &.is-active {
+    @include touch () {
+      display: none;
+    }
+  }
+
   &-brand {
     width: 100%;
     max-width: 100%;
@@ -133,6 +139,10 @@ $app-pad-bottom: 1.5rem;
     border-radius: $radius;
     color: $dark;
     background-color: $light;
+
+    @include touch () {
+      position: relative;
+    }
 
     &.is-active {
       display: block;
