--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -91,7 +91,6 @@ $app-pad-bottom: 1.5rem;
     width: 100%;
     max-width: 100%;
     align-items: center;
-    //align-content: space-between;
   }
 
   .app-icon {
@@ -121,9 +120,7 @@ $app-pad-bottom: 1.5rem;
   }
 
   &__title {
-    //max-width: 70vw;
     max-height: 2.25rem;
-    //overflow: hidden;
   }
 
   $topleft: 0.2rem;
@@ -139,6 +136,7 @@ $app-pad-bottom: 1.5rem;
     z-index: 100;
     min-width: 20rem;
     min-height: 15rem;
+    border: $border-size solid rgba($color-mid, $color-alpha);
     border-radius: $radius;
     color: $dark;
     background-color: $light;
@@ -158,11 +156,6 @@ $app-pad-bottom: 1.5rem;
       z-index: 10;
       fill: $color-bg;
       transition: $speed-slow;
-
-      &:focus,
-      &:hover {
-        transform: scale(1.2);
-      }
     }
 
     @include touch () {
@@ -177,7 +170,7 @@ $app-pad-bottom: 1.5rem;
       margin-top: 1rem;
       margin-bottom: 1rem;
       padding-bottom: 0.5rem;
-      border-bottom: solid 1px rgba($color-mid, $color-alpha);
+      border-bottom: solid $border-size rgba($color-mid, $color-alpha);
 
       &:last-of-type {
         border-bottom: none;
@@ -345,12 +338,26 @@ $app-pad-bottom: 1.5rem;
   }
 }
 
+button,
+.button {
+  &.hover {
+    &:focus,
+    &:hover {
+      transform: scale(1.2);
+    }
+
+    &[disabled] {
+      transform: scale(1);
+    }
+  }
+}
+
 .row {
   &__item {}
 
   &.is-active & {
     &__item {
-      border: 1px solid $light;
+      border: $border-size solid $light;
     }
   }
 
