--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -69,6 +69,10 @@ $app-pad-bottom: 1.5rem;
   opacity: 0.66;
 }
 
+.hide-overflow {
+  overflow: hidden;
+}
+
 .pad {
   padding: 0.33rem 0.5rem;
 }
@@ -176,6 +180,20 @@ $app-pad-bottom: 1.5rem;
         border-bottom: none;
       }
 
+      &.user {
+        .button {
+          overflow: hidden;
+        }
+
+        .icon {
+          fill: $primary;
+          margin-right: 0.5rem;
+          position: absolute;
+          right: 0;
+          transform: scale(1.25) translateY(15%);
+        }
+      }
+
       .control,
       .field {
         margin-left: 0.5rem;
@@ -187,7 +205,7 @@ $app-pad-bottom: 1.5rem;
         }
       }
 
-      &.user .control {
+      .control {
         .button {
           margin: 0 auto;
           width: 80%;
