--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -186,7 +186,7 @@ $app-pad-bottom: 1.5rem;
         }
 
         .icon {
-          fill: $primary;
+          fill: $light;
           margin-right: 0.5rem;
           position: absolute;
           right: 0;
