hide sort options when loggedo out

--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -180,6 +180,12 @@ $app-pad-bottom: 1.5rem;
         border-bottom: none;
       }
 
+      &.disabled {
+        opacity: 0.5;
+
+        .field { display: none; }
+      }
+
       &.user {
         .button {
           overflow: hidden;
