bugfix row height on interaction with textarea

--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -421,8 +421,7 @@ button,
       background-color: transparent;
 
       &.textarea {
-        min-height: 1rem;
-        height: inherit;
+        min-height: inherit;
         padding-right: 0.5rem;
       }
     }
