--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -60,8 +60,33 @@ $app-pad-bottom: 1.5rem;
     padding: $point * 0.25rem;
   }
 
+  .pl-#{$point} {
+    padding-left: $point * 0.25rem;
+  }
+  .pr-#{$point} {
+    padding-right: $point * 0.25rem;
+  }
+  .pt-#{$point} {
+    padding-top: $point * 0.25rem;
+  }
+  .pb-#{$point} {
+    padding-bottom: $point * 0.25rem;
+  }
+
   .m-#{$point} {
     margin: $point * 0.25rem;
+  }
+  .ml-#{$point} {
+    margin-left: $point * 0.25rem;
+  }
+  .mr-#{$point} {
+    margin-right: $point * 0.25rem;
+  }
+  .mt-#{$point} {
+    margin-top: $point * 0.25rem;
+  }
+  .mb-#{$point} {
+    margin-bottom: $point * 0.25rem;
   }
 }
 
@@ -71,10 +96,6 @@ $app-pad-bottom: 1.5rem;
 
 .hide-overflow {
   overflow: hidden;
-}
-
-.pad {
-  padding: 0.33rem 0.5rem;
 }
 
 .v-align-center {
@@ -393,10 +414,14 @@ button,
   }
 }
 
-
+$rowPadY: 0.25rem;
+$rowPadX: 1.5rem;
+$rowDivide: 2;
 
 .row {
-  &__item {}
+  padding: 0;
+  margin-bottom: $rowPadY * 2;
+  color: $light;
 
   &.is-active & {
     &__item {
@@ -404,44 +429,95 @@ button,
     }
   }
 
-  .word-break {
-    word-break: break-word;
-  }
+  &__item {
+    display: flex;
+    align-items: flex-start;
+    flex-grow: 1;
+    border-radius: $radius;
 
-  &__content {
-    &-pre {
-      padding-top: 0.4rem;
-    }
+    &-buttons {
+      margin-top: $rowPadY;
+      margin-left: $rowPadX;
 
-    &-button,
-    &-progress {
-      margin: 0;
-      padding: 0;
-      padding-top: 0.35rem;
-      min-width: 2.7rem;
-    }
+      .button {
+        @extend .mx-3;
+        @extend .mb-1;
 
-    &-button {
-      min-width: 1.5rem;
-      border-color: transparent;
-      background-color: transparent;
-
-      svg {
-        transition: $speed-slow;
+        border-color: transparent;
       }
     }
 
-    &-progress {
-      padding-left: 0.25rem;
-    }
+    &__content {
+      &-pre,
+      &-date {
+        padding-top: $rowPadY;
+      }
 
-    &-input {
-      border-color: transparent;
-      background-color: transparent;
+      &-pre {
+        min-width: 2rem;
+      }
 
-      &.textarea {
-        min-height: inherit;
-        padding-right: 0.5rem;
+      &-date {
+        padding-right: $rowPadX/$rowDivide;
+      }
+
+      &-button,
+      &-progress {
+        margin: 0;
+        padding: 0;
+        padding-top: $rowPadY;
+      }
+
+      &-button {
+        min-width: 1.5rem;
+        border-color: transparent;
+        background-color: transparent;
+
+        svg {
+          transition: $speed-slow;
+        }
+      }
+
+      &-pre {
+        padding-left: $rowPadX/4;
+        padding-right: $rowPadX/4;
+      }
+
+      &-msg {
+        padding: $rowPadY 0;
+        border: none;
+      }
+
+      &-input {
+        flex-grow: 1;
+        display: inline-block;
+        border: none;
+        background-color: transparent;
+
+        textarea {
+          padding: $rowPadY 0;
+          color: $light;
+          border: none;
+          min-height: inherit;
+          display: inline-block;
+          background-color: transparent;
+
+          &.textarea { min-height: inherit; }
+
+          &:focus,
+          &:hover,
+          &:active {
+            box-shadow: none;
+            outline: none;
+            border-color: transparent;
+          }
+        }
+      }
+
+      &-msg,
+      &-input {
+        flex-grow: 1;
+        word-break: break-word;
       }
     }
   }
