--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -443,6 +443,7 @@ $rowDivide: 2;
         @extend .mx-3;
         @extend .mb-1;
 
+        font-weight: bolder;
         border-color: transparent;
       }
     }
