--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -430,6 +430,7 @@ $rowDivide: 2;
   }
 
   &__item {
+    margin-left: 0.25rem;
     display: flex;
     align-items: flex-start;
     flex-grow: 1;
