--- a/front/src/sass/index.scss
+++ b/front/src/sass/index.scss
@@ -100,3 +100,13 @@ button,
     padding: 0;
   }
 }
+
+
+.dialog.modal.is-active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
