--- a/front/src/sass/_style.scss
+++ b/front/src/sass/_style.scss
@@ -7,12 +7,33 @@ body {
   min-width: 100%;
 }
 
-$array: (0, 1 ,2 ,3 ,4 ,5 ,6 ,7 ,8 ,9);
+.input,
+.box {
+  background-color: $white;
+  border-radius: $radius;
+}
 
-$app-height: calc(100vh - 2.5rem);
+.field {
+  .input[disabled],
+  input[disabled] {
+    background-color: white;
+    color: rgb(35, 35, 35) !important;
+  }
+}
 
-$footer-height: 2.5rem;
-$app-pad-bottom: 1.5rem;
+button,
+.button {
+  border-width: $border-size;
+}
+
+.dialog.modal.is-active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
 
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
@@ -21,20 +42,6 @@ $app-pad-bottom: 1.5rem;
   min-height: $app-height;
   background-color: $color-bg;
   padding-bottom: $app-pad-bottom;
-}
-
-.icon {
-  &.is-small {
-    transform: scale(0.75);
-  }
-
-  &.is-medium {
-    transform: scale(1.25);
-  }
-
-  &.is-large {
-    transform: scale(1.5);
-  }
 }
 
 #footer {
@@ -51,282 +58,6 @@ $app-pad-bottom: 1.5rem;
   background-color: $black;
 }
 
-@each $point in $array {
-  .z-index-#{$point} {
-    z-index: $point;
-  }
-
-  .p-#{$point} {
-    padding: $point * 0.25rem;
-  }
-
-  .pl-#{$point} {
-    padding-left: $point * 0.25rem;
-  }
-  .pr-#{$point} {
-    padding-right: $point * 0.25rem;
-  }
-  .pt-#{$point} {
-    padding-top: $point * 0.25rem;
-  }
-  .pb-#{$point} {
-    padding-bottom: $point * 0.25rem;
-  }
-
-  .m-#{$point} {
-    margin: $point * 0.25rem;
-  }
-  .ml-#{$point} {
-    margin-left: $point * 0.25rem;
-  }
-  .mr-#{$point} {
-    margin-right: $point * 0.25rem;
-  }
-  .mt-#{$point} {
-    margin-top: $point * 0.25rem;
-  }
-  .mb-#{$point} {
-    margin-bottom: $point * 0.25rem;
-  }
-}
-
-.color-alpha {
-  opacity: 0.66;
-}
-
-.hide-overflow {
-  overflow: hidden;
-}
-
-.v-align-center {
-  vertical-align: middle;
-}
-
-.navbar {
-  $navbar-icon-width: 3rem;
-  $navbar-btn-width: 3rem;
-
-  &.is-active {
-    @include touch () {
-      display: none;
-    }
-  }
-
-  &-brand {
-    width: 100%;
-    max-width: 100%;
-    align-items: center;
-  }
-
-  .app-icon {
-    display: inline-block;
-    width: $navbar-icon-width;
-  }
-
-  &__main {
-    flex-grow: 1;
-    overflow: hidden;
-    display: inline-block;
-    max-width: calc(100% - #{$navbar-btn-width} - #{$navbar-icon-width} + 0.5rem);
-
-    &-title {
-      overflow: hidden;
-      white-space: nowrap;
-    }
-  }
-
-  &__btn {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    margin-top: 0.3rem;
-    flex-grow: 0;
-    width: $navbar-btn-width;
-  }
-
-  &__title {
-    max-height: 2.25rem;
-  }
-
-  $topleft: 0.2rem;
-
-  &__options {
-    margin: 0 0.75rem;
-    margin-bottom: 1rem;
-    padding: 0.5rem 1rem;
-    display: none;
-    position: fixed;
-    top: 0.5rem;
-    right: 0;
-    z-index: 100;
-    min-width: 20rem;
-    min-height: 15rem;
-    border: $border-size solid rgba($color-mid, $color-alpha);
-    border-radius: $radius;
-    color: $dark;
-    background-color: $light;
-
-    @include touch () {
-      position: relative;
-    }
-
-    &.is-active {
-      display: block;
-    }
-
-    &-close {
-      position: absolute;
-      top: $topleft;
-      right: $topleft;
-      z-index: 10;
-      fill: $color-bg;
-      transition: $speed-slow;
-    }
-
-    @include touch () {
-      top: 0.5rem;
-      left: 0;
-      right: 0;
-      min-width: 15rem;
-    }
-
-    .option {
-      position: relative;
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-      padding-bottom: 0.5rem;
-      border-bottom: solid $border-size rgba($color-mid, $color-alpha);
-
-      &:last-of-type {
-        border-bottom: none;
-      }
-
-      &.disabled {
-        opacity: 0.5;
-
-        .field { display: none; }
-      }
-
-      &.user {
-        .button {
-          overflow: hidden;
-        }
-
-        .icon {
-          fill: $light;
-          margin-right: 0.5rem;
-          position: absolute;
-          right: 0;
-          transform: scale(1.25) translateY(15%);
-        }
-      }
-
-      .control,
-      .field {
-        margin-left: 0.5rem;
-
-        .label {
-          float: left;
-          min-width: 5rem;
-          margin-right: 0.5rem;
-        }
-      }
-
-      .control {
-        .button {
-          margin: 0 auto;
-          width: 80%;
-        }
-      }
-
-      .button,
-      .title,
-      .name {
-        font-weight: bolder;
-      }
-      .title {
-        font-size: 1.25rem;
-        margin-bottom: 0.5rem;
-      }
-      .name {
-        font-size: 1rem;
-      }
-    }
-  }
-
-  .navbar-menu.is-active {
-    display: none;
-  }
-
-  .navbar-item {
-    padding: 0.5rem 0;
-  }
-}
-
-.animate {
-  transition: $speed-slow;
-}
-
-.columns {
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.columns.is-vtop {
-  align-items: flex-start;
-}
-
-.columns.is-vbottom {
-  align-items: flex-end;
-}
-
-.is-radius {
-  border-radius: $radius;
-}
-
-.is-flex {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  &.start { align-items: flex-start; }
-  &.end { align-items: flex-end; }
-  &.center { justify-content: center; }
-  &.column { flex-direction: column; }
-}
-
-.flex-space-between {
-  justify-content: space-between;
-}
-
-.flex-space-around {
-  justify-content: space-around;
-}
-
-.flex-grow {
-  flex-grow: 1;
-}
-
-.flex-shrink {
-  flex-shrink: 1;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
-.flex-nowrap {
-  flex-wrap: nowrap;
-}
-
-.align-self-start {
-  align-self: flex-start;
-}
-
-.align-self-end {
-  align-self: flex-end;
-}
-
 button,
 .button {
   &.hover {
@@ -337,197 +68,6 @@ button,
 
     &[disabled] {
       transform: scale(1);
-    }
-  }
-}
-
-.select-bar {
-  padding: 0 0.5rem;
-  margin-left: 0.3rem;
-  margin-bottom: 0.5rem;
-  border-radius: $radius;
-  background-color: $color-mid;
-  position: relative;
-  overflow: hidden;
-
-  $side: 2px;
-
-  &.home { padding: 0.2rem; }
-
-  &-info {
-    position: absolute;
-    right: 0.75rem;
-    top: 0.5rem;
-    opacity: 0.75;
-    color: $color-fore;
-  }
-
-  &-highlight {
-    position: absolute;
-    top: $side;
-    bottom: $side;
-    left: $side;
-    width: 100%;
-    z-index: 0;
-    border-radius: $radius;
-    background-color: $primary;
-    transition: $speed;
-  }
-
-  button {
-    outline: none;
-    border: none;
-    position: relative;
-    z-index: 10;
-    background-color: transparent;
-    font-weight: bolder;
-    text-transform: uppercase;
-    transition: inherit;
-    color: $light;
-
-    span {
-      transition: inherit;
-      transform: scale(1.05);
-    }
-  }
-
-  button.is-primary {
-    pointer-events: none;
-    background-color: transparent;
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: $light;
-      background-color: transparent;
-    }
-
-    span {
-      transform: scale(1.15);
-    }
-  }
-
-  button[disabled] {
-    background-color: transparent;
-
-    &:hover {
-      color: $light;
-    }
-  }
-}
-
-$rowPadY: 0.33rem;
-$rowPadX: 1.5rem;
-$rowDivide: 2;
-
-.row {
-  padding: 0;
-  margin-bottom: $rowPadY * 1.5;
-  color: $light;
-
-  &.is-active & {
-    &__item {
-      border: $border-size solid $light;
-    }
-  }
-
-  &__item {
-    margin-left: 0.25rem;
-    display: flex;
-    align-items: flex-start;
-    flex-grow: 1;
-    border-radius: $radius;
-
-    &-buttons {
-      margin-top: $rowPadY * 3;
-      margin-left: $rowPadX * 0.5;
-      margin-right: $rowPadX * 3;
-      display: flex;
-      justify-content: space-between;
-
-      .button {
-        @extend .mx-3;
-        @extend .mb-1;
-
-        font-weight: bolder;
-        border-color: transparent;
-      }
-    }
-
-    &__content {
-      &-pre,
-      &-date {
-        padding-top: $rowPadY;
-      }
-
-      &-pre {
-        min-width: 2rem;
-      }
-
-      &-date {
-        padding-right: $rowPadX/$rowDivide;
-      }
-
-      &-button,
-      &-progress {
-        margin: 0;
-        padding: 0;
-      }
-
-      &-button {
-        min-width: 1.5rem;
-        border-color: transparent;
-        background-color: transparent;
-        height: unset;
-        transform: translateY(0.2rem) translateX(0.1rem);
-
-        svg {
-          transition: $speed-slow;
-        }
-      }
-
-      &-pre {
-        padding-left: $rowPadX/4;
-      }
-
-      &-msg {
-        border: none;
-        padding: $rowPadY 0;
-        padding-left: $rowPadX/3.5;
-      }
-
-      &-input {
-        flex-grow: 1;
-        display: inline-block;
-        border: none;
-        background-color: transparent;
-
-        textarea {
-          padding: $rowPadY 0;
-          padding-left: $rowPadX/3.5;
-          color: $light;
-          border: none;
-          min-height: inherit;
-          display: inline-block;
-          background-color: transparent;
-
-          &.textarea { min-height: inherit; }
-
-          &:focus,
-          &:hover,
-          &:active {
-            box-shadow: none;
-            outline: none;
-            border-color: transparent;
-          }
-        }
-      }
-
-      &-msg,
-      &-input {
-        flex-grow: 1;
-        word-break: break-word;
-      }
     }
   }
 }
